--- a/.eslintrc
+++ b/.eslintrc
@@ -8,9 +8,6 @@
     "plugin:react/recommended",
     "plugin:react-hooks/recommended",
     "plugin:@typescript-eslint/recommended",
-    "plugin:import/errors",
-    "plugin:import/warnings",
-    "plugin:import/typescript",
     "react-app",
     "react-app/jest"
   ],
@@ -26,9 +23,11 @@
     "jsx-a11y"
   ],
   "rules": {
+    //"no-unused-vars": "warn",
     "no-console": "warn",
-    "quotes": ["error", "single"],
+    "quotes": ["error", "double"],
     "jsx-quotes": ["error", "prefer-double"],
-    "no-unused-vars": "off"
+    "indent": ["warn", 2],
+    "max-len": ["warn", {"code": 150}]
   }
 }
