--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     }
   },
   "lint-staged": {
-    "*.{js,ts,tsx}": "./node_modules/.bin/eslint"
+    "*.{js,ts,tsx}": ["npm run lint:fix", "git add"]
   },
   "browserslist": {
     "production": [
