--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.40.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.3",
@@ -36,7 +38,10 @@
     }
   },
   "lint-staged": {
-    "*.{js,ts,tsx}": ["npm run lint:fix", "git add"]
+    "*.{js,ts,tsx}": [
+      "npm run lint:fix",
+      "git add"
+    ]
   },
   "browserslist": {
     "production": [
